Refactor scrollbars existence in AutoSize mode

AutoSize is a mode in which the frame is sized to match the size of the
content, rather than the other way around. This is used for extension
popups, for example.

When we're in this mode, FrameViewAutoSizeInfo is responsible for
resizing the FrameView. This object wants to prevent layout from
deciding whether scrollbars should be shown or not. The way it does this
is by setting the ScrollbarMode itself to either AlwaysOn or AlwaysOff.
To prevent layout or other parts of the system from overwriting this
setting, FVASI also sets a "scrollbar lock". When this lock is set,
writes to the scrollbar mode are ignored.

FVASI is the only user of scrollbar lock. This CL removes the scrollbar
lock and adds autosize_scrollbar_vertical|horizontal_mode to
ScrollableArea. Instead of preventing writes to the scrollbar mode in
FrameView, we now check these autosize modes *on read* and return them
instead of FrameView's ScrollbarModes if they're non-auto. In other
words, the autosize scrollbar modes override the normal scrollbar mode.

Bug: 811478
Change-Id: I8cd5462e7e309249365bd4fe556b09f175511bda
Reviewed-on: https://chromium-review.googlesource.com/917653
Commit-Queue: David Bokan <bokan@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536788}
Former-commit-id: d4c85df550eb5e06fd15e29e2b9f3ffbebc7ceaf