third_party/WebKit/Source/core/layout/LayoutMedia.cpp
@@ -155,15 +155,15 @@ LayoutUnit LayoutMedia::ComputePanelWidth(const LayoutRect& media_rect) const {
   // TODO(crbug.com/771379): Once we no longer assume that the video is in the
   // main frame for the visibility calculation below, we will only care about
   // the video's frame's scrollbar check below.
-  if (page_view->HorizontalScrollbarMode() != kScrollbarAlwaysOff)
+  if (page_view->EffectiveHorizontalScrollbarMode() != kScrollbarAlwaysOff)
     return media_rect.Width();
 
   // If the video's frame (can be different from main frame if video is in an
   // iframe) can have a scrollbar, we'll never be cut off.
   LocalFrame* media_frame = GetFrame();
   LocalFrameView* media_page_view = media_frame ? media_frame->View() : nullptr;
-  if (media_page_view &&
-      media_page_view->HorizontalScrollbarMode() != kScrollbarAlwaysOff) {
+  if (media_page_view && media_page_view->EffectiveHorizontalScrollbarMode() !=
+                             kScrollbarAlwaysOff) {
     return media_rect.Width();
   }
 
